--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/121/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/121/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /121
-title: "📨 #121: Next.js, experimental_cache, Qwikify, Typesafety, 3D, Vitest Preview, Outstatic, Remix, React-Native, Web Components..."
+title: "This Week In React #121: Next.js, experimental_cache, Qwikify, Typesafety, 3D, Vitest Preview, Outstatic, Remix, React-Native, Web Components..."
 authors: [slorber]
 date: 10-25-2022
 image: /img/TWIR_POST.png
