--- a/website/newsletter/121/index.mdx
+++ b/website/newsletter/121/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /121
-title: "This Week In React #121: Next.js, experimental_cache, Qwikify, Typesafety, 3D, Vitest Preview, Outstatic, Remix, React-Native, Web Components..."
+title: "This Week In React #121: Next.js, experimental_cache, CSS-in-JS, Qwikify, Typesafety, 3D, Vitest Preview, Outstatic, Remix, React-Native..."
 authors: [slorber]
 date: 10-25-2022
 image: /img/TWIR_POST.png
@@ -8,7 +8,7 @@ image: /img/TWIR_POST.png
 
 Hi everyone!
 
-Last week I made a mistake, I sent out the 220 edition instead of 120 😅 No one noticed, can't be that big a deal.
+Last week I made a mistake, I sent out the 220 edition instead of 120 😅 No one noticed, probably not a big deal!
 
 It's the conference season: the ViteConf replay is available, React Advanced just finished, and more to come.
 
