--- a/website/newsletter/121/index.mdx
+++ b/website/newsletter/121/index.mdx
@@ -162,4 +162,4 @@ We have several roles open for developers focused on React Native! Pay is ~160k 
 
 ## 🤭 Fun {#fun}
 
-[![Meme - When an ESLint rule is a warning instead of an error. - oh no - anyway (nobody cares)](/emails/issues/120/meme.png)](https://twitter.com/markdalgleish/status/1580827326799310848)
+[![Meme - VSCode running on iWatch](/emails/issues/121/meme.png)](https://twitter.com/rohanpdofficial/status/1583455633134977026)
