--- a/website/newsletter/121/index.mdx
+++ b/website/newsletter/121/index.mdx
@@ -18,7 +18,7 @@ We also have all the hosts agreeing to improve their Next.js support at the same
 
 Don't miss William Candillon's React-Native video season 5 which starts today!
 
-I recorded a [podcast episode about Docusaurus 2.0 with PodRocket](https://podrocket.logrocket.com/docusaurus) last month. Totally forgot to mention it 😅 I want to do more podcast episodes in the future, so please invite me 😉.
+I recorded a [podcast episode about Docusaurus 2.0 with PodRocket](https://podrocket.logrocket.com/docusaurus) last month. Totally forgot to mention it 😅 I want to do more podcast episodes in the future, so please invite me! 😉
 
 <!-- truncate -->
 
