--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /NUMBER-TODO
-title: "This Week In React #TEMPLATE: ..."
+title: "React Hebdo #TEMPLATE: ..."
 authors: [slorber]
 date: 12-31-2030 TODO
 image: /img/TWIR_POST.png
