rename all newsletter titles for SEO/RSS metadata reasons

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/109-and-previous.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/109-and-previous.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /previous
-title: "📨 #109 et avant"
+title: "React Hebdo #109 et avant"
 authors: [slorber]
 date: 01-01-2020
 image: /img/TWIR_POST.png
