--- a/website/newsletter/112.mdx
+++ b/website/newsletter/112.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /112
-title: "📨 #112: Astro, Radix, Remix, Next.js, MDX, Storybook, Expo 46, Skia, TanStack, TC39, Docusaurus..."
+title: "This Week In React #112: Astro, Radix, Remix, Next.js, MDX, Storybook, Expo 46, Skia, TanStack, TC39, Docusaurus..."
 authors: [slorber]
 date: 07-13-2022
 image: /img/TWIR_POST.png
