--- a/website/newsletter/117/index.mdx
+++ b/website/newsletter/117/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /117
-title: "📨 #117: React criticism, useEvent, Next.js, Remix, Gatsby, Expo, Storybook, Ignite, React-Native, TypeScript, Qwik..."
+title: "This Week In React #117: React criticism, useEvent, Next.js, Remix, Gatsby, Expo, Storybook, Ignite, React-Native, TypeScript, Qwik..."
 authors: [slorber]
 date: 09-27-2022
 image: /img/TWIR_POST.png
