--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/114.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/114.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /114
-title: "📨 #114: 🎉 official launch of Docusaurus 2.0 🥳️"
+title: "React Hebdo #114: 🎉 official launch of Docusaurus 2.0 🥳️"
 authors: [slorber]
 date: 08-01-2022
 image: /img/TWIR_POST.png
