--- a/website/newsletter/120/index.mdx
+++ b/website/newsletter/120/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /120
-title: "📨 #120: use RFC, Sandpack, Progressive enhancement, Streaming, Storybook, React-Native, Codeflow, Fontaine, Unplugin, Node.js 19, TypeRunner..."
+title: "This Week In React #120: use RFC, Sandpack, Progressive enhancement, Streaming, Storybook, React-Native, Codeflow, Fontaine, Unplugin, Node.js 19, TypeRunner..."
 authors: [slorber]
 date: 10-18-2022
 image: /img/TWIR_POST.png
