--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/122/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/122/index.mdx
@@ -4,6 +4,7 @@ title: "React Hebdo #122: ..."
 authors: [slorber]
 date: 11-01-2022
 image: /img/TWIR_POST.png
+draft: true
 ---
 
 Salut à tous !
@@ -40,6 +41,16 @@ Vous pouvez le [télécharger ici](https://sizzy.co/?utm_campaign=newsletter&utm
 
 ## ⚛️ React {#react}
 
+**[Next.js 13](https://nextjs.org/blog/next-13)**
+
+**[Introducing Turbopack: Rust-based successor to Webpack](https://vercel.com/blog/turbopack)**
+
+- [Add fetch Instrumentation to Dedupe Fetches](https://github.com/facebook/react/pull/25516): welp, today's drama. apparently Seb Markbage recently added a PR to start monkey-patching fetch to add some caching behavior: so folks are protesting: https://www.reddit.com/r/javascript/comments/yex2oj/so_apparently_theres_now_code_in_react_to/ https://github.com/facebook/react/issues/25573
+- [The Gatsby Slice API: High Precision Incremental Builds](https://www.gatsbyjs.com/blog/gatsby-slice-api/)
+- [How We Improved React Loading Times by 70% with Next.js](https://www.causal.app/blog/next-js)
+- [Seeding the Query Cache](https://tkdodo.eu/blog/seeding-the-query-cache)
+- [How to Build a Blog with Fresh](https://deno.com/blog/build-a-blog-with-fresh)
+
 <SubscribeFormEmbed />
 
 ---
@@ -65,6 +76,8 @@ N'hésitez pas à aller voir notre site [premieroctet.com](https://www.premieroc
 ---
 
 ## 📱 React-Native {#react-native}
+
+- [Wix Engineering - Now An Official React Native Partner](https://www.wix.engineering/post/wix-engineering-now-an-official-react-native-partner)
 
 ---
 
@@ -98,6 +111,8 @@ Masteos réinvente l’expérience de l’investissement locatif, en proposant u
 ---
 
 ## 🔀 Autre {#other}
+
+- [Vercel acquires Splitbee to expand first-party analytics](https://vercel.com/blog/vercel-acquires-splitbee)
 
 ---
 
