--- a/website/newsletter/122/index.mdx
+++ b/website/newsletter/122/index.mdx
@@ -4,6 +4,7 @@ title: "This Week In React  #122: ..."
 authors: [slorber]
 date: 11-01-2022
 image: /img/TWIR_POST.png
+draft: true
 ---
 
 Hi everyone!
